samples/_failures_safe/1761217572_f9ea52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e3511e2.c: In function ‘print_token’:
./samples/SAFE/__tmp_9e3511e2.c:167:62: error: missing terminating " character
  167 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF", "UNKNOWN
      |                                                              ^~~~~~~~
./samples/SAFE/__tmp_9e3511e2.c:167:9: error: expected expression at end of input
  167 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF", "UNKNOWN
      |         ^~~~~~~~
./samples/SAFE/__tmp_9e3511e2.c:167:9: error: expected declaration or statement at end of input
